# Mandelscape

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  DevProcessGuideLines.txt  MandelLandscape.1.trace  MandelLandscape.trace  README.md  TODO.txt  build-cross.sh  camera.cpp  camera.h  changelog.txt  checklist.txt  configure.sh  main.cpp  math3d.cpp  math3d.h  pre-commit.sh  save.lua  shader.frag  shader.fs  shader.vert  shader.vs  tags  terrain.cpp  terrain.h  terrainMeshLoader.cpp  terrainMeshLoader.h  thanks.txt  utils.cpp  utils.h
cmake/: FindGLFW.cmake  Findstb.cmake  UpdateSubmodules.cmake
documentation/: coloring-algorithm.txt  coloring-scripts.txt  shape-algorithm.txt  shape-scripts.txt  writing-custom-algorithms.txt  writing-custom-scripts.txt
include/glad/: glad.h
landscape-scripts/: default-color.frag  stripes-color.frag
landscape-scripts/3brot/: 3brot-shape.lua
landscape-scripts/mandelbrot/: hobold-orbit-shape.lua  hobold-orbit-value.frag  mandelbrot-shape.lua  mandelbrot-value.frag
presets/: default.lua
presets/3brot/: 3brot-shape.lua  3brot-value.frag
presets/mandelbrot/: hobold-orbit-color.frag  hobold-orbit-shape.lua  mandelbrot-orbit-value.frag  mandelbrot-shape.c  mandelbrot-shape.lua
scripts/: package-win.sh
shaders/: color.frag  color.function  deepLib.frag  deepShader.frag  head.frag  orbit_trap.frag  shader.frag  shader.vert  shallowLib.frag  value.frag  value.function  valueDeep.function  valueOrbit.frag  valueOrbit.function
src/: CMakeLists.txt  activeAction.hpp  algorithm.cpp  algorithm.hpp  autoController.cpp  autoController.hpp  camera.cpp  camera.h  camera.hpp  colorController.cpp  colorController.hpp  config.cpp  config.h  config.hpp  event.cpp  event.h  event.hpp  eventDispatcher.cpp  eventDispatcher.h  framebuffer.cpp  framebuffer.hpp  genericController.cpp  genericController.hpp  gl.cpp  gl.hpp  glDestructors.hpp  glad.c  glfwEnums.hpp  glfwInput.cpp  glfwInput.hpp  keymaps.cpp  keymaps.hpp  main.cpp  mandelTypeTraits.h  mandelTypeTraits.hpp  math3d.cpp  math3d.h  mesh.cpp  mesh.hpp  metaController.hpp  (+54 more)
src/util/: gl.hpp
tests/: CMakeLists.txt  algorithm-tests.cpp  algorithm-tests.hpp  autoController-tests.cpp  autoController-tests.hpp  genericController-tests.cpp  genericController-tests.hpp  lua-tests.cpp  lua-tests.hpp  main.cpp  metaController-tests.cpp  metaController-tests.hpp  momentaryActionsMap-tests.cpp  momentaryActionsMap-tests.hpp  persistentActionMap-tests.cpp  persistentActionMap-tests.hpp  player-tests.cpp  player-tests.hpp  playerController-tests.hpp  playerControllerWalk-tests.hpp  playerHelper-tests.cpp  playerHelper-tests.hpp  serialization-tests.cpp  serialization-tests.hpp  serialize-tests.hpp  stateMap-tests.cpp  testUtils.cpp  testUtils.hpp  tests.cpp  toActions-tests.hpp  util-tests.cpp  utils-tests.cpp  utils-tests.hpp  walkController-tests.cpp  walkController-tests.hpp
textures/skybox/: CREDIT
